--- a/index.html
+++ b/index.html
@@ -229,19 +229,19 @@
 
     <main id="main">
         <article>
-            <img src="img1/Screen-Shot-2021-03-31-at-2.14.49-PM.png" alt="Pancor Jackhammer Mk3A2">
+            <img src="Screen-Shot-2021-03-31-at-2.14.49-PM.png" alt="Pancor Jackhammer Mk3A2">
             <p>Pancor Jackhammer Mk3A2 америкснкьй булпап дробовик 12 калібра має барабан та автоматичну систему перезаряджання Масса: 7.9 кг Довжина: 787мм ЦІНА: 2500 $</p>
             <a href="#" class="hh" onclick="showProductDetails('Pancor Jackhammer Mk3A2')">Додати до кошика</a>
         </article>
         
         <article>
-            <img src="img1/завантаження.jpg.jfif" alt="АК-74">
+            <img src="завантаження.jpg.jfif" alt="АК-74">
             <p>АК-74 класичний радянський автомат під набій 5,45×39 мм розроблений в 1970 році прийнятий на озброєння в багатьох країнах Масса: 3.3 кг Довжина: 943мм ЦІНА: 500 $</p>
             <a href="#" class="hh" onclick="showProductDetails('АК-74')">Додати до кошика</a>
         </article>
         
         <article>
-            <img src="img1/images11.jpg.jfif" alt="АК-47">
+            <img src="images11.jpg.jfif" alt="АК-47">
             <p>АК-47 класичний радянський автомат під набій 7,62-мм мм розроблений в 1947 році прийнятий на озброєння в деяких країнах Масса: 4.3 кг Довжина: 870мм ЦІНА: 350 $</p>
             <a href="#" class="hh" onclick="showProductDetails('АК-47')">Додати до кошика</a>
         </article>
